# Forge

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
agent/curator/: build.gradle.kts
agent/memory/: build.gradle.kts
agent/orchestrator/: build.gradle.kts
agent/tools/: build.gradle.kts
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ko/: strings.xml
core/hardware/: build.gradle.kts
core/ui/: build.gradle.kts
core/ui/src/main/res/values/: strings.xml
core/ui/src/main/res/values-ko/: strings.xml
data/agents/: build.gradle.kts
data/catalog/: build.gradle.kts
data/discovery/: build.gradle.kts
data/download/: build.gradle.kts
data/storage/: build.gradle.kts
feature/agents/: build.gradle.kts
feature/agents/src/main/res/values/: strings.xml
feature/agents/src/main/res/values-ko/: strings.xml
feature/catalog/: build.gradle.kts
feature/catalog/src/main/res/values/: strings.xml
feature/catalog/src/main/res/values-ko/: strings.xml
feature/chat/: build.gradle.kts
feature/chat/src/main/res/values/: strings.xml
feature/chat/src/main/res/values-ko/: strings.xml
feature/compare/: build.gradle.kts
feature/compare/src/main/res/values-ko/: strings.xml
feature/discover/: build.gradle.kts
feature/settings/: build.gradle.kts
feature/workflows/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
runtime/core/: build.gradle.kts
runtime/executorch/: build.gradle.kts
runtime/llamacpp/: build.gradle.kts
runtime/llamacpp/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
runtime/mediapipe/: build.gradle.kts
runtime/mlc/: build.gradle.kts
runtime/registry/: build.gradle.kts
(+122 files in other folders)
